--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ Keras-Preprocessing==1.1.2
 Markdown==3.2.2
 matplotlib==3.3.2
 numpy==1.18.5
-opencv-python==4.4.0.44
+opencv-python-headless==4.2.0.32
 pandas>=0.24.2
 plotly==4.10.0
 python-dateutil==2.8.1
